# workapi_DIO

./: alembic.ini  docker-compose.yml  pyproject.toml  workout.session.sql
alembic/: env.py
alembic/versions/: 83dfa911dd88_d_init_db.py
workoutapi/: __init__.py  main.py  rounters.py
workoutapi/atleta/: controller.py  models.py  schemas.py
workoutapi/categoria/: controller.py  models.py  schemas.py
workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
workoutapi/configs/: database.py  settings.py
workoutapi/contrib/: dependencies.py  models.py  schemas.py
