[tool.poetry]
name = "workoutapi"
version = "0.1.0"
description = ""
authors = ["BrunoPinheirofe <bruno2013pinheiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]

taskipy = "^1.12.2"
ruff = "^0.4.10"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev workoutapi/main.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

create_migrations ='alembic revision --autogenerate -m'
run_migration = 'alembic upgrade head'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
